ajout du reste du td1

--- a/tp1.html
+++ b/tp1.html
@@ -13,6 +13,18 @@
         <p>
             <span id ="valeurTemp"></span> °C
         </p>
+        <p id="valeurPhrase" aria-live="polite"></p>
+        <p>
+        <data id="valeurTemp" value="">
+            0
+        </data>
+        <abbr title="degrés Celsius">°C</abbr>
+        </p>
+
+        <p id="plageTemp"></p>
+
+        <h2>Historique des températures</h2>
+        <ul id="historique"></ul>
 
     </section>
 
